src/bison.output
Nonterminals useless in grammar

    function
    arglist
    arglist_


Terminals unused in grammar

    JSTOK_ROOT
    ">>>"
    "#name"
    "#author"
    "#version"
    "#orcid"
    "function"
    JS_LIST
    JS_BLOCK
    JS_EMPTY
    JS_POSTPLUS
    JS_POSTMINUS
    "=="
    "!="


Rules useless in grammar

  102 function: "function" "(" arglist_ ")" block
  103         | "function" ident "(" arglist_ ")" block

  104 arglist: arglist "," ident
  105        | ident

  106 arglist_: arglist
  107         | ε


State 52 conflicts: 5 shift/reduce
State 53 conflicts: 5 shift/reduce
State 57 conflicts: 5 shift/reduce
State 61 conflicts: 5 shift/reduce
State 62 conflicts: 5 shift/reduce
State 64 conflicts: 5 shift/reduce
State 65 conflicts: 5 shift/reduce
State 69 conflicts: 5 shift/reduce
State 129 conflicts: 5 shift/reduce
State 130 conflicts: 5 shift/reduce
State 131 conflicts: 5 shift/reduce
State 132 conflicts: 5 shift/reduce
State 133 conflicts: 5 shift/reduce
State 134 conflicts: 42 shift/reduce
State 135 conflicts: 5 shift/reduce
State 136 conflicts: 5 shift/reduce
State 137 conflicts: 5 shift/reduce
State 138 conflicts: 5 shift/reduce
State 139 conflicts: 5 shift/reduce
State 140 conflicts: 5 shift/reduce
State 141 conflicts: 5 shift/reduce
State 142 conflicts: 5 shift/reduce
State 143 conflicts: 5 shift/reduce
State 144 conflicts: 42 shift/reduce
State 148 conflicts: 5 shift/reduce
State 149 conflicts: 5 shift/reduce
State 150 conflicts: 5 shift/reduce
State 151 conflicts: 5 shift/reduce
State 152 conflicts: 5 shift/reduce
State 153 conflicts: 5 shift/reduce
State 154 conflicts: 5 shift/reduce
State 155 conflicts: 5 shift/reduce
State 156 conflicts: 5 shift/reduce
State 157 conflicts: 5 shift/reduce
State 158 conflicts: 5 shift/reduce
State 159 conflicts: 5 shift/reduce
State 160 conflicts: 5 shift/reduce
State 161 conflicts: 5 shift/reduce
State 162 conflicts: 5 shift/reduce
State 163 conflicts: 5 shift/reduce
State 164 conflicts: 5 shift/reduce
State 165 conflicts: 42 shift/reduce
State 166 conflicts: 5 shift/reduce
State 167 conflicts: 5 shift/reduce
State 179 conflicts: 1 shift/reduce
State 184 conflicts: 47 reduce/reduce
State 188 conflicts: 5 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program statement
    3        | ε

    4 statement: block
    5          | for_loop
    6          | while_loop
    7          | conditional
    8          | var_def
    9          | var_decl
   10          | expr ";"
   11          | "return" ";"
   12          | "break" ";"
   13          | "continue" ";"
   14          | "return" expr ";"
   15          | ";"

   16 var_def: "let" ident "=" expr ";"
   17        | "const" ident "=" expr ";"

   18 var_decl: "let" ident ";"
   19         | "const" ident ";"

   20 block: "{" statements "}"

   21 statements: statements statement
   22           | ε

   23 conditional: "if" "(" expr ")" statement "else" statement
   24            | "if" "(" expr ")" statement

   25 while_loop: "while" "(" expr ")" statement
   26           | "do" statement "while" "(" expr ")" ";"

   27 for_loop: "for" "(" expr ";" expr_ ";" expr_ ")" statement

   28 expr_: expr
   29      | ε

   30 expr: expr "&&" expr
   31     | expr "||" expr
   32     | expr "&" expr
   33     | expr "|" expr
   34     | expr "^" expr
   35     | expr "===" expr
   36     | expr "!==" expr
   37     | expr "<<" expr
   38     | expr ">>" expr
   39     | expr "<" expr
   40     | expr ">" expr
   41     | expr "<=" expr
   42     | expr ">=" expr
   43     | expr "+" expr
   44     | expr "-" expr
   45     | expr "*" expr
   46     | expr "**" expr
   47     | expr "/" expr
   48     | expr "=" expr
   49     | expr "%" expr
   50     | expr "+=" expr
   51     | expr "-=" expr
   52     | expr "*=" expr
   53     | expr "**=" expr
   54     | expr "/=" expr
   55     | expr "%=" expr
   56     | expr "<<=" expr
   57     | expr ">>=" expr
   58     | expr ">>>=" expr
   59     | expr "&=" expr
   60     | expr "|=" expr
   61     | expr "||=" expr
   62     | expr "&&=" expr
   63     | expr "^=" expr
   64     | expr "in" expr
   65     | expr "instanceof" expr
   66     | expr "." JSTOK_IDENT
   67     | expr "[" expr "]"
   68     | function_call
   69     | "(" expr ")"
   70     | "!" expr
   71     | "~" expr
   72     | expr "?" expr ":" expr
   73     | "+" number
   74     | "-" number
   75     | "++" expr
   76     | expr "++"
   77     | "--" expr
   78     | expr "--"
   79     | JSTOK_IDENT
   80     | boolean
   81     | string
   82     | number
   83     | "new" expr "(" exprlist_ ")"
   84     | "new" expr
   85     | "delete" expr
   86     | "void" expr
   87     | "typeof" expr
   88     | "null"
   89     | "undefined"
   90     | "NaN"
   91     | "Infinity"

   92 string: JSTOK_STRING

   93 boolean: "true"
   94        | "false"

   95 function_call: expr "(" exprlist_ ")"

   96 exprlist: exprlist "," expr
   97         | expr

   98 exprlist_: exprlist
   99          | ε

  100 number: JSTOK_NUMBER

  101 ident: JSTOK_IDENT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    JSTOK_ROOT (258)
    JSTOK_NUMBER (259) 100
    JSTOK_IDENT (260) 66 79 101
    JSTOK_STRING (261) 92
    "(" (262) 23 24 25 26 27 69 83 95
    ")" (263) 23 24 25 26 27 69 83 95
    "+" (264) 43 73
    "-" (265) 44 74
    "*" (266) 45
    "/" (267) 47
    "^" (268) 34
    "true" (269) 93
    "false" (270) 94
    "if" (271) 23 24
    "else" (272) 23
    "while" (273) 25 26
    ";" (274) 10 11 12 13 14 15 16 17 18 19 26 27
    "===" (275) 35
    "=" (276) 16 17 48
    "&&" (277) 30
    "||" (278) 31
    "&" (279) 32
    "|" (280) 33
    "<=" (281) 41
    ">=" (282) 42
    "<" (283) 39
    ">" (284) 40
    "!" (285) 70
    "~" (286) 71
    "!==" (287) 36
    "{" (288) 20
    "}" (289) 20
    "[" (290) 67
    "]" (291) 67
    "," (292) 96
    "?" (293) 72
    ":" (294) 72
    "return" (295) 11 14
    "." (296) 66
    "void" (297) 86
    "<<" (298) 37
    ">>" (299) 38
    ">>>" (300)
    "#name" (301)
    "#author" (302)
    "#version" (303)
    "#orcid" (304)
    "break" (305) 12
    "continue" (306) 13
    "for" (307) 27
    "%" (308) 49
    "+=" (309) 50
    "-=" (310) 51
    "++" (311) 75 76
    "--" (312) 77 78
    "do" (313) 26
    "null" (314) 88
    "/=" (315) 54
    "*=" (316) 52
    "%=" (317) 55
    ">>=" (318) 57
    ">>>=" (319) 58
    "<<=" (320) 56
    "&=" (321) 59
    "&&=" (322) 62
    "|=" (323) 60
    "||=" (324) 61
    "^=" (325) 63
    "**" (326) 46
    "**=" (327) 53
    "new" (328) 83 84
    "delete" (329) 85
    "undefined" (330) 89
    "NaN" (331) 90
    "let" (332) 16 18
    "const" (333) 17 19
    "Infinity" (334) 91
    "function" (335)
    "typeof" (336) 87
    "in" (337) 64
    "instanceof" (338) 65
    JS_LIST (339)
    JS_BLOCK (340)
    JS_EMPTY (341)
    JS_POSTPLUS (342)
    JS_POSTMINUS (343)
    "==" (344)
    "!=" (345)
    PREFIX (346)
    UNARY (347)
    POSTFIX (348)
    NEW_NO_ARGS (349)
    CALL (350)
    NEW_ARGS (351)


Nonterminals, with rules where they appear

    $accept (97)
        on left: 0
    start (98)
        on left: 1
        on right: 0
    program (99)
        on left: 2 3
        on right: 1 2
    statement (100)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15
        on right: 2 21 23 24 25 26 27
    var_def (101)
        on left: 16 17
        on right: 8
    var_decl (102)
        on left: 18 19
        on right: 9
    block (103)
        on left: 20
        on right: 4
    statements (104)
        on left: 21 22
        on right: 20 21
    conditional (105)
        on left: 23 24
        on right: 7
    while_loop (106)
        on left: 25 26
        on right: 6
    for_loop (107)
        on left: 27
        on right: 5
    expr_ (108)
        on left: 28 29
        on right: 27
    expr (109)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
        on right: 10 14 16 17 23 24 25 26 27 28 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 69 70 71 72 75 76 77 78 83 84 85 86 87 95 96 97
    string (110)
        on left: 92
        on right: 81
    boolean (111)
        on left: 93 94
        on right: 80
    function_call (112)
        on left: 95
        on right: 68
    exprlist (113)
        on left: 96 97
        on right: 96 98
    exprlist_ (114)
        on left: 98 99
        on right: 83 95
    number (115)
        on left: 100
        on right: 73 74 82
    ident (116)
        on left: 101
        on right: 16 17 18 19


State 0

    0 $accept: • start $end

    $default  reduce using rule 3 (program)

    start    go to state 1
    program  go to state 2


State 1

    0 $accept: start • $end

    $end  shift, and go to state 3


State 2

    1 start: program •
    2 program: program • statement

    JSTOK_NUMBER  shift, and go to state 4
    JSTOK_IDENT   shift, and go to state 5
    JSTOK_STRING  shift, and go to state 6
    "("           shift, and go to state 7
    "+"           shift, and go to state 8
    "-"           shift, and go to state 9
    "true"        shift, and go to state 10
    "false"       shift, and go to state 11
    "if"          shift, and go to state 12
    "while"       shift, and go to state 13
    ";"           shift, and go to state 14
    "!"           shift, and go to state 15
    "~"           shift, and go to state 16
    "{"           shift, and go to state 17
    "return"      shift, and go to state 18
    "void"        shift, and go to state 19
    "break"       shift, and go to state 20
    "continue"    shift, and go to state 21
    "for"         shift, and go to state 22
    "++"          shift, and go to state 23
    "--"          shift, and go to state 24
    "do"          shift, and go to state 25
    "null"        shift, and go to state 26
    "new"         shift, and go to state 27
    "delete"      shift, and go to state 28
    "undefined"   shift, and go to state 29
    "NaN"         shift, and go to state 30
    "let"         shift, and go to state 31
    "const"       shift, and go to state 32
    "Infinity"    shift, and go to state 33
    "typeof"      shift, and go to state 34

    $default  reduce using rule 1 (start)

    statement      go to state 35
    var_def        go to state 36
    var_decl       go to state 37
    block          go to state 38
    conditional    go to state 39
    while_loop     go to state 40
    for_loop       go to state 41
    expr           go to state 42
    string         go to state 43
    boolean        go to state 44
    function_call  go to state 45
    number         go to state 46


State 3

    0 $accept: start $end •

    $default  accept


State 4

  100 number: JSTOK_NUMBER •

    $default  reduce using rule 100 (number)


State 5

   79 expr: JSTOK_IDENT •

    $default  reduce using rule 79 (expr)


State 6

   92 string: JSTOK_STRING •

    $default  reduce using rule 92 (string)


State 7

   69 expr: "(" • expr ")"

    JSTOK_NUMBER  shift, and go to state 4
    JSTOK_IDENT   shift, and go to state 5
    JSTOK_STRING  shift, and go to state 6
    "("           shift, and go to state 7
    "+"           shift, and go to state 8
    "-"           shift, and go to state 9
    "true"        shift, and go to state 10
    "false"       shift, and go to state 11
    "!"           shift, and go to state 15
    "~"           shift, and go to state 16
    "void"        shift, and go to state 19
    "++"          shift, and go to state 23
    "--"          shift, and go to state 24
    "null"        shift, and go to state 26
    "new"         shift, and go to state 27
    "delete"      shift, and go to state 28
    "undefined"   shift, and go to state 29
    "NaN"         shift, and go to state 30
    "Infinity"    shift, and go to state 33
    "typeof"      shift, and go to state 34

    expr           go to state 47
    string         go to state 43
    boolean        go to state 44
    function_call  go to state 45
    number         go to state 46


State 8

   73 expr: "+" • number

    JSTOK_NUMBER  shift, and go to state 4

    number  go to state 48


State 9

   74 expr: "-" • number

    JSTOK_NUMBER  shift, and go to state 4

    number  go to state 49


State 10

   93 boolean: "true" •

    $default  reduce using rule 93 (boolean)


State 11

   94 boolean: "false" •

    $default  reduce using rule 94 (boolean)


State 12

   23 conditional: "if" • "(" expr ")" statement "else" statement
   24            | "if" • "(" expr ")" statement

    "("  shift, and go to state 50


State 13

   25 while_loop: "while" • "(" expr ")" statement

    "("  shift, and go to state 51


State 14

   15 statement: ";" •

    $default  reduce using rule 15 (statement)


State 15

   70 expr: "!" • expr

    JSTOK_NUMBER  shift, and go to state 4
    JSTOK_IDENT   shift, and go to state 5
    JSTOK_STRING  shift, and go to state 6
    "("           shift, and go to state 7
    "+"           shift, and go to state 8
    "-"           shift, and go to state 9
    "true"        shift, and go to state 10
    "false"       shift, and go to state 11
    "!"           shift, and go to state 15
    "~"           shift, and go to state 16
    "void"        shift, and go to state 19
    "++"          shift, and go to state 23
    "--"          shift, and go to state 24
    "null"        shift, and go to state 26
    "new"         shift, and go to state 27
    "delete"      shift, and go to state 28
    "undefined"   shift, and go to state 29
    "NaN"         shift, and go to state 30
    "Infinity"    shift, and go to state 33
    "typeof"      shift, and go to state 34

    expr           go to state 52
    string         go to state 43
    boolean        go to state 44
    function_call  go to state 45
    number         go to state 46


State 16

   71 expr: "~" • expr

    JSTOK_NUMBER  shift, and go to state 4
    JSTOK_IDENT   shift, and go to state 5
    JSTOK_STRING  shift, and go to state 6
    "("           shift, and go to state 7
    "+"           shift, and go to state 8
    "-"           shift, and go to state 9
    "true"        shift, and go to state 10
    "false"       shift, and go to state 11
    "!"           shift, and go to state 15
    "~"           shift, and go to state 16
    "void"        shift, and go to state 19
    "++"          shift, and go to state 23
    "--"          shift, and go to state 24
    "null"        shift, and go to state 26
    "new"         shift, and go to state 27
    "delete"      shift, and go to state 28
    "undefined"   shift, and go to state 29
    "NaN"         shift, and go to state 30
    "Infinity"    shift, and go to state 33
    "typeof"      shift, and go to state 34

    expr           go to state 53
    string         go to state 43
    boolean        go to state 44
    function_call  go to state 45
    number         go to state 46


State 17

   20 block: "{" • statements "}"

    $default  reduce using rule 22 (statements)

    statements  go to state 54


State 18

   11 statement: "return" • ";"
   14          | "return" • expr ";"

    JSTOK_NUMBER  shift, and go to state 4
    JSTOK_IDENT   shift, and go to state 5
    JSTOK_STRING  shift, and go to state 6
    "("           shift, and go to state 7
    "+"           shift, and go to state 8
    "-"           shift, and go to state 9
    "true"        shift, and go to state 10
    "false"       shift, and go to state 11
    ";"           shift, and go to state 55
    "!"           shift, and go to state 15
    "~"           shift, and go to state 16
    "void"        shift, and go to state 19
    "++"          shift, and go to state 23
    "--"          shift, and go to state 24
    "null"        shift, and go to state 26
    "new"         shift, and go to state 27
    "delete"      shift, and go to state 28
    "undefined"   shift, and go to state 29
    "NaN"         shift, and go to state 30
    "Infinity"    shift, and go to state 33
    "typeof"      shift, and go to state 34

    expr           go to state 56
    string         go to state 43
    boolean        go to state 44
    function_call  go to state 45
    number         go to state 46


State 19

   86 expr: "void" • expr

    JSTOK_NUMBER  shift, and go to state 4
    JSTOK_IDENT   shift, and go to state 5
    JSTOK_STRING  shift, and go to state 6
    "("           shift, and go to state 7
    "+"           shift, and go to state 8
    "-"           shift, and go to state 9
    "true"        shift, and go to state 10
    "false"       shift, and go to state 11
    "!"           shift, and go to state 15
    "~"           shift, and go to state 16
    "void"        shift, and go to state 19
    "++"          shift, and go to state 23
    "--"          shift, and go to state 24
    "null"        shift, and go to state 26
    "new"         shift, and go to state 27
    "delete"      shift, and go to state 28
    "undefined"   shift, and go to state 29
    "NaN"         shift, and go to state 30
    "Infinity"    shift, and go to state 33
    "typeof"      shift, and go to state 34

    expr           go to state 57
    string         go to state 43
    boolean        go to state 44
    function_call  go to state 45
    number         go to state 46


State 20

   12 statement: "break" • ";"

    ";"  shift, and go to state 58


State 21

   13 statement: "continue" • ";"

    ";"  shift, and go to state 59


State 22

   27 for_loop: "for" • "(" expr ";" expr_ ";" expr_ ")" statement

    "("  shift, and go to state 60


State 23

   75 expr: "++" • expr

    JSTOK_NUMBER  shift, and go to state 4
    JSTOK_IDENT   shift, and go to state 5
    JSTOK_STRING  shift, and go to state 6
    "("           shift, and go to state 7
    "+"           shift, and go to state 8
    "-"           shift, and go to state 9
    "true"        shift, and go to state 10
    "false"       shift, and go to state 11
    "!"           shift, and go to state 15
    "~"           shift, and go to state 16
    "void"        shift, and go to state 19
    "++"          shift, and go to state 23
    "--"          shift, and go to state 24
    "null"        shift, and go to state 26
    "new"         shift, and go to state 27
    "delete"      shift, and go to state 28
    "undefined"   shift, and go to state 29
    "NaN"         shift, and go to state 30
    "Infinity"    shift, and go to state 33
    "typeof"      shift, and go to state 34

    expr           go to state 61
    string         go to state 43
    boolean        go to state 44
    function_call  go to state 45
    number         go to state 46


State 24

   77 expr: "--" • expr

    JSTOK_NUMBER  shift, and go to state 4
    JSTOK_IDENT   shift, and go to state 5
    JSTOK_STRING  shift, and go to state 6
    "("           shift, and go to state 7
    "+"           shift, and go to state 8
    "-"           shift, and go to state 9
    "true"        shift, and go to state 10
    "false"       shift, and go to state 11
    "!"           shift, and go to state 15
    "~"           shift, and go to state 16
    "void"        shift, and go to state 19
    "++"          shift, and go to state 23
    "--"          shift, and go to state 24
    "null"        shift, and go to state 26
    "new"         shift, and go to state 27
    "delete"      shift, and go to state 28
    "undefined"   shift, and go to state 29
    "NaN"         shift, and go to state 30
    "Infinity"    shift, and go to state 33
    "typeof"      shift, and go to state 34

    expr           go to state 62
    string         go to state 43
    boolean        go to state 44
    function_call  go to state 45
    number         go to state 46


State 25

   26 while_loop: "do" • statement "while" "(" expr ")" ";"

    JSTOK_NUMBER  shift, and go to state 4
    JSTOK_IDENT   shift, and go to state 5
    JSTOK_STRING  shift, and go to state 6
    "("           shift, and go to state 7
    "+"           shift, and go to state 8
    "-"           shift, and go to state 9
    "true"        shift, and go to state 10
    "false"       shift, and go to state 11
    "if"          shift, and go to state 12
    "while"       shift, and go to state 13
    ";"           shift, and go to state 14
    "!"           shift, and go to state 15
    "~"           shift, and go to state 16
    "{"           shift, and go to state 17
    "return"      shift, and go to state 18
    "void"        shift, and go to state 19
    "break"       shift, and go to state 20
    "continue"    shift, and go to state 21
    "for"         shift, and go to state 22
    "++"          shift, and go to state 23
    "--"          shift, and go to state 24
    "do"          shift, and go to state 25
    "null"        shift, and go to state 26
    "new"         shift, and go to state 27
    "delete"      shift, and go to state 28
    "undefined"   shift, and go to state 29
    "NaN"         shift, and go to state 30
    "let"         shift, and go to state 31
    "const"       shift, and go to state 32
    "Infinity"    shift, and go to state 33
    "typeof"      shift, and go to state 34

    statement      go to state 63
    var_def        go to state 36
    var_decl       go to state 37
    block          go to state 38
    conditional    go to state 39
    while_loop     go to state 40
    for_loop       go to state 41
    expr           go to state 42
    string         go to state 43
    boolean        go to state 44
    function_call  go to state 45
    number         go to state 46


State 26

   88 expr: "null" •

    $default  reduce using rule 88 (expr)


State 27

   83 expr: "new" • expr "(" exprlist_ ")"
   84     | "new" • expr

    JSTOK_NUMBER  shift, and go to state 4
    JSTOK_IDENT   shift, and go to state 5
    JSTOK_STRING  shift, and go to state 6
    "("           shift, and go to state 7
    "+"           shift, and go to state 8
    "-"           shift, and go to state 9
    "true"        shift, and go to state 10
    "false"       shift, and go to state 11
    "!"           shift, and go to state 15
    "~"           shift, and go to state 16
    "void"        shift, and go to state 19
    "++"          shift, and go to state 23
    "--"          shift, and go to state 24
    "null"        shift, and go to state 26
    "new"         shift, and go to state 27
    "delete"      shift, and go to state 28
    "undefined"   shift, and go to state 29
    "NaN"         shift, and go to state 30
    "Infinity"    shift, and go to state 33
    "typeof"      shift, and go to state 34

    expr           go to state 64
    string         go to state 43
    boolean        go to state 44
    function_call  go to state 45
    number         go to state 46


State 28

   85 expr: "delete" • expr
